# neural-network-cpp

./: .gitmodules  CMakeLists.txt  NeuralNetwork.cpp  NeuralNetwork.hpp  README.md  gui.cpp  main.cpp
.cache/clangd/index/: main.cpp.6F9FDD0ECA00156B.idx  mnist_reader.hpp.775EF8354718922C.idx  mnist_reader_common.hpp.73A73C917F594724.idx
